# vala-apps

./: .gitattributes  .gitignore  README.md  build_all.sh  style.sh  update_po.sh
agatha/: CMakeLists.txt  Makefile  meson.build  readme.md
agatha/data/: agatha.desktop  org.vala-apps.agatha.gschema.xml
agatha/po/: CMakeLists.txt  agatha.pot  sr.po
agatha/po/sr/: agatha.po
agatha/src/: dialogs.vala  main.vala  pagezoom.vala  settings.vala  viewer.vala
dlauncher/: CMakeLists.txt  Makefile  meson.build  readme.md
dlauncher/data/: dlauncher.desktop
dlauncher/src/: cache.vala  main.vala  model.vala  style.vala
emendo/: CMakeLists.txt  Makefile  meson.build  readme.md
emendo/data/: emendo.desktop  org.vala-apps.emendo.gschema.xml
emendo/po/: CMakeLists.txt  emendo.pot  sr.po
emendo/src/: application.vala  apply.vala  color.vala  dialogs.vala  find.vala  mainwin.vala  nbook.vala  operations.vala  prefdialog.vala  replace.vala  settings.vala  tabs.vala
emendo/src/preferences/: apply.vala  prefdialog.vala  settings.vala
emendo/src/search/: find.vala  replace.vala
emendo/src/widgets/: application.vala  color.vala  dialogs.vala  mainwin.vala  nbook.vala
gtk-appearance/: CMakeLists.txt  Makefile  meson.build  readme.md
gtk-appearance/data/: gtk-appearance-openbox  gtk-appearance.desktop
gtk-appearance/po/: CMakeLists.txt  gtk-appearance.pot  sr.po
gtk-appearance/src/: main.vala  settings.vala
pangea/: CMakeLists.txt
pangea/data/: org.vala-apps.pangea.gschema.xml
pangea/src/: iconview.vala  main.vala  menu.vala  monitor.vala  operations.vala  settings.vala  thumbnails.vala  vars.vala  window.vala
taeni/: CMakeLists.txt  Makefile  meson.build  readme.md
taeni/data/: org.vala-apps.taeni.gschema.xml  taeni.desktop
taeni/po/: CMakeLists.txt  sr.po  taeni.pot
taeni/src/: taeni.vala
vestigo/: CMakeLists.txt  meson.build  readme.md
vestigo/data/: org.vala-apps.vestigo.gschema.xml  vestigo.desktop
vestigo/po/: CMakeLists.txt  sr.po
vestigo/src/: iconview.vala  main.vala  menu.vala  monitor.vala  operations.vala  settings.vala  thumbnails.vala  vars.vala  window.vala
voyager/: CMakeLists.txt  Makefile  meson.build  readme.md
voyager/data/: org.vala-apps.voyager.gschema.xml  voyager.desktop
voyager/po/: CMakeLists.txt  sr.po  voyager.pot
voyager/src/: voyager.vala
wpset/: CMakeLists.txt  Makefile  meson.build  readme.md
wpset/data/: org.vala-apps.wpset.gschema.xml  wpset-shell  wpset.desktop
wpset/po/: CMakeLists.txt  sr.po  wpset.pot
wpset/po/sr/: wpset.po
wpset/src/: wpset.vala
